# apex-debug

./: .gitignore  README.md  apex-orchestrator-source-report.md  pyproject.toml
.github/workflows/: apex-debug.yml  ci.yml
apex_debug/: __init__.py  config.py
apex_debug/ai/: client.py  explainer.py  fixer.py  prompts.py
apex_debug/cli/: __init__.py  app.py  interactive.py
apex_debug/core/: __init__.py  events.py  finding.py  history.py  session.py
apex_debug/engine/: __init__.py  autofix.py  baseline.py  gitdiff.py  knowledge.py  plugins.py  runner.py  watcher.py
apex_debug/engine/patterns/: __init__.py  base.py  correctness.py  performance.py  security.py  style.py
apex_debug/parsers/: __init__.py  multilang.py  registry.py
apex_debug/reporter/: __init__.py  html_reporter.py  json_reporter.py  markdown.py  sarif.py
config/: default.yaml
docs/: ci-cd.md
examples/: pre-commit-hook.sh
scripts/: pre-commit.py
tests/: test_ai.py  test_autofix.py  test_baseline.py  test_gitdiff.py  test_new_patterns.py  test_patterns.py  test_runner.py  test_watch.py
tests/fixtures/: buggy_sample.go  buggy_sample.js  buggy_sample.py  buggy_sample.rs
vscode/: package.json
vscode/src/: extension.ts  treeProvider.ts
