[project]
name = "apex-debug"
version = "0.2.0"
description = "Apex Debug — AST-first static analysis with 24+ detection patterns, plugins, and AI-augmented debugging"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Apex" }]
readme = "README.md"
keywords = ["static-analysis", "security", "linting", "ast", "debugging", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
tree-sitter = ["tree-sitter>=0.23"]
ai = ["openai>=1.0", "jinja2>=3.0"]
interactive = ["prompt-toolkit>=3.0"]
all = ["apex-debug[tree-sitter,ai,interactive]"]
dev = ["apex-debug[all]", "pytest>=8.0", "ruff>=0.5"]

[project.scripts]
apex-debug = "apex_debug.cli.app:app"
apex = "apex_debug.cli.app:app"

[project.urls]
Repository = "https://github.com/Mert544/apex-debug"
Issues = "https://github.com/Mert544/apex-debug/issues"

[tool.setuptools.packages.find]
include = ["apex_debug*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
